--- a/styles/contact.css
+++ b/styles/contact.css
@@ -128,10 +128,10 @@ nav p {
 .banner-text-right {
     color: #FED8B1;
     margin-left: auto;
-    padding-right: 170px;
+    padding-right: 120px;
     padding-left: 15px;
     background-color: rgba(166, 123, 91, 0.5);
-    margin-right: 80px;
+    margin-right: 10vw;
     height: 100%;
     display: flex;
     align-items: left;
@@ -146,7 +146,7 @@ nav p {
 
 .right-text-content {
     padding-bottom: 2px;
-    padding-left: 8vw;
+    padding-left: 2vw;
 }
 
 .right-container-line {
