--- a/styles/banner.css
+++ b/styles/banner.css
@@ -1,4 +1,3 @@
-
 .banner-container {
     width: 100%;
     height: 30vh;
@@ -39,6 +38,11 @@
 .right-text-content {
     padding-bottom: 2px;
     padding-left: 2vw;
+    margin-bottom: 5px;
+}
+
+.right-text-content h1 {
+    margin-top: -6px;
 }
 
 .right-container-line {
