--- a/styles/contact.css
+++ b/styles/contact.css
@@ -148,6 +148,11 @@ nav p {
 .right-text-content {
     padding-bottom: 2px;
     padding-left: 2vw;
+    margin-bottom: 5px;
+}
+
+.right-text-content h1 {
+    margin-top: -6px;
 }
 
 .right-container-line {
