FIXED COFFEEFLIGHTS WHAT THE FUCK
- jesus

--- a/styles/coffeeflights.css
+++ b/styles/coffeeflights.css
@@ -1,12 +1,19 @@
-
 .main-content{
     margin-left: 220px;
+}
+
+.coffee-flights-header > h1, h2, h3 {
+    text-shadow: 2px 2px #ECB176;
 }
 
 .banner-container {
     width: 100%;
     height: 30vh;
     
+}
+
+p:not(:first-child) {
+    font-size: 18px;
 }
 
 .banner {
@@ -92,14 +99,20 @@
 .right-column, .left-column {
     padding-left: 20px;
     padding-right: 20px;
+    flex: 1; /* this single line centers everything */
 }
 
+/* bring both columns closer to center */
+.left-column {
+    margin-left: 200px;
+}
 
+.right-column {
+    margin-right: 200px;
+}
 
-
-
-
-
-
-
-
+.bottom-note {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
