--- a/styles/coffeeflights.css
+++ b/styles/coffeeflights.css
@@ -120,3 +120,10 @@ p:not(:first-child) {
     flex-direction: column;
     text-align: center;
 }
+
+.menu-footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
