--- a/styles/coffeeflights.css
+++ b/styles/coffeeflights.css
@@ -2,6 +2,12 @@
     margin-left: 220px;
 }
 
+p {
+    color: #26201C;
+}
+
+
+
 .coffee-flights-header > h1, h2, h3 {
     text-shadow: 2px 2px #ECB176;
 }
@@ -15,6 +21,8 @@
 p:not(:first-child) {
     font-size: 18px;
 }
+
+
 
 .banner {
     width: 100%;
@@ -45,6 +53,7 @@ p:not(:first-child) {
 
 .right-text-content h1{
     font-size: 2.7em;
+    margin-top: -6px;
 }
 
 .right-text-content {
@@ -53,9 +62,6 @@ p:not(:first-child) {
     margin-bottom: 5px;
 }
 
-.right-text-content h1 {
-    margin-top: -6px;
-}
 
 .right-container-line {
     border: 1px solid rgb(216, 152, 99);
@@ -91,24 +97,48 @@ p:not(:first-child) {
 
  .coffee-flights-content {
     display: flex;
-    flex-direction: row;
     text-align: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    align-items: flex-start; 
+    flex-wrap: wrap;
+    background-color: #fdc892;
+    border-radius: 10%;
+    padding-left: 60px;
+    padding-right: 60px;
+    max-width: 800px;
+    margin: 0 auto;
+    padding-top: 35px;
+    padding-bottom: 35px;
+    min-height: 100vh;
+    margin-bottom: 50px;
+}
+
+.top-line {
+    border: 1px solid rgba(216, 152, 99, 0.3);
+    width: 65%;
+    margin-bottom: 20px;
+}
+
+.bottom-line {
+    border: 1px solid rgba(216, 152, 99, 0.3);
+    width: 85%;
+    margin-bottom: 50px;
 }
 
 .right-column, .left-column {
     padding-left: 20px;
     padding-right: 20px;
     flex: 1; /* this single line centers everything */
+    width: 100%;
 }
 
 /* bring both columns closer to center */
 .left-column {
-    margin-left: 200px;
+    margin-left: 20px;
 }
 
 .right-column {
-    margin-right: 200px;
+    margin-right: 20px;
 }
 
 .menu-content {
@@ -116,14 +146,43 @@ p:not(:first-child) {
 }
 
 .bottom-note {
-    display: flex;
-    flex-direction: column;
     text-align: center;
+
 }
 
-.menu-footer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
 
+
+
+
+    .menu-footer {
+        margin-top: auto; /* Pushes footer to the bottom */width: 100%;
+        text-align: center; /* Centers text inside the footer */padding: 1rem; /* Optional, for spacing */
+      }
+  
+
+
+.flights-photos {
+    display: flex;
+    gap: 18px;
+    justify-content: center;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    padding-left: 60px;
+    padding-right: 60px;
+    overflow: hidden;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    background-color:  #A67B5B;
+}
+
+
+.img {
+    width: 220px;
+    box-shadow: 04px 4px rgba(0, 0, 0, 0.3);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.img:hover {
+    transform: scale(1.1);
+    box-shadow: 01px 1px rgba(0, 0, 0, 0.3);
 }
