--- a/styles/coffeeflights.css
+++ b/styles/coffeeflights.css
@@ -18,71 +18,22 @@ p {
     
 }
 
-p:not(:first-child) {
-    font-size: 18px;
+.coffee-flights-header a {
+    text-decoration: none;
+    color:#26201C;
+}
+
+.coffee-flights-header a:hover {
+    opacity: 0.8;
+
+}
+
+.coffee-flights-header a:active {
+    opacity: 0.6;
+
 }
 
 
-
-.banner {
-    width: 100%;
-    height: 40vh;
-    background-image: url(/images/coffeepour2.jpg);
-    background-size: cover;
-    background-position: 60%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-}
-
-.banner-text-right {
-    color: #FED8B1;
-    margin-left: auto;
-    padding-right: 120px;
-    padding-left: 15px;
-    background-color: rgba(166, 123, 91, 0.5);
-    margin-right: 10vw;
-    height: 100%;
-    display: flex;
-    align-items: left;
-    justify-content: flex-end;
-    flex-direction: column;
-    padding-top: 20px;
-}
-
-.right-text-content h1{
-    font-size: 2.7em;
-    margin-top: -6px;
-}
-
-.right-text-content {
-    padding-bottom: 2px;
-    padding-left: 2vw;
-    margin-bottom: 5px;
-}
-
-
-.right-container-line {
-    border: 1px solid rgb(216, 152, 99);
-    width: 210px;
-    margin-right: 70px;
- }
-
-.banner-text-left {
-    color: #FED8B1;
-    margin-right: auto;
-    font-size: 1.5em;
-    display: flex;
- }
-
- .left-text-content {
-    padding-left: 8vw;
-    padding-top: 20vh; 
-    font-size: 2vw;
-    padding-right: 5vw;
-    padding-bottom: 5vh;
- }
 
 
 
@@ -121,7 +72,7 @@ p:not(:first-child) {
 
 .bottom-line {
     border: 1px solid rgba(216, 152, 99, 0.3);
-    width: 85%;
+    width: 75%;
     margin-bottom: 50px;
 }
 
@@ -178,7 +129,7 @@ p:not(:first-child) {
 
 .img {
     width: 220px;
-    box-shadow: 04px 4px rgba(0, 0, 0, 0.3);
+    box-shadow: 04px 4px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
