--- a/styles/contact.css
+++ b/styles/contact.css
@@ -12,6 +12,8 @@ body, button {
     margin-left: 220px;
 }
 
+/* navigation bar */
+
 .nav-logo {
     display: block;
     width: 180px;
@@ -20,8 +22,6 @@ body, button {
     margin-right: auto;
     margin-top: 14px;
 }
-
-
 
 .nav-button {
     padding: 15px 40px;
@@ -109,11 +109,8 @@ nav p {
     color:#FED8B1;
 }
 
-.banner-container {
-    width: 100%;
-    height: 30vh;
-    
-}
+
+/* banner */
 
 .banner {
     width: 100%;
@@ -122,68 +119,76 @@ nav p {
     background-size: cover;
     background-position: 60%;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
+    align-items: flex-end;
     overflow: hidden;
 }
 
 .banner-text-right {
     color: #FED8B1;
-    margin-left: auto;
-    padding-right: 120px;
-    padding-left: 15px;
+    padding-right: 140px;
+    padding-left: 20px;
     background-color: rgba(166, 123, 91, 0.5);
-    margin-right: 10vw;
+    margin-right: 120px;
     height: 100%;
     display: flex;
-    align-items: left;
+    align-items: flex-end;
     justify-content: flex-end;
     flex-direction: column;
-    padding-top: 20px;
+}
+
+.banner-text-left, .banner-text-right {
+    padding-bottom: 0;
 }
 
 .right-text-content h1{
-    font-size: 2.7em;
+    margin: 0;
+    padding: 0;
+    font-size: 50px;
+
 }
 
 .right-text-content {
-    padding-bottom: 2px;
-    padding-left: 2vw;
-    margin-bottom: 5px;
+    margin-left: 25px;
+    padding-bottom: 38px;
 }
 
-.right-text-content h1 {
-    margin-top: -6px;
-}
 
 .right-container-line {
     border: 1px solid rgb(216, 152, 99);
-    width: 210px;
-    margin-right: 70px;
+    width: 220px;
+    margin: 0;
+    padding: 0;
  }
 
 .banner-text-left {
     color: #FED8B1;
-    margin-right: auto;
-    font-size: 1.5em;
-    display: flex;
+    margin-left: 120px;
+ }
+
+ .left-text-content h1{
+    margin: 0;
+    padding: 0;
+    font-size: 50px;
  }
 
  .left-text-content {
-    padding-left: 8vw;
-    padding-top: 20vh; 
-    font-size: 2vw;
-    padding-right: 5vw;
-    padding-bottom: 5vh;
- }
+    display: flex;
+    justify-content: center;
+    padding-bottom: 38px;
+
+}
+
+ /* about icons */
 
  .icons-container {
     display: flex;
-    padding-top: 180px;
-    padding-bottom: 50px;
+    
+    padding-top: 60px;
+    padding-bottom: 40px;
     justify-content: space-evenly;
-    padding-left: 10px;
-    padding-right: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
  }
 
  .icon {
@@ -226,6 +231,19 @@ nav p {
 .hours-text {
     color: #6d5c51;;
 }
+
+.image-icons {
+    width: 58px;
+}
+
+.icon-image {
+    width: 50px;
+    height: 50px;
+}
+
+
+
+/* contact form */
 
  
 .contact-container {
@@ -332,6 +350,8 @@ textarea::placeholder {
     
 }
 
+/* footer menu */
+
 
 .footer-container{
     padding-top: 90px;
@@ -373,15 +393,6 @@ textarea::placeholder {
 
 .footer-container, .copyright {
     background-color: #FED8B1;
-}
-
-.image-icons {
-    width: 58px;
-}
-
-.icon-image {
-    width: 50px;
-    height: 50px;
 }
 
 
