--- a/styles/footer.css
+++ b/styles/footer.css
@@ -24,6 +24,10 @@
     color:#564940;
 }
 
+.footer-container a:active {
+    opacity: 0.6;
+}
+
 .footer-break {
     border: 1px solid rgba(216, 152, 99, 0.3);
     margin-top: 25px;
