--- a/styles/banner.css
+++ b/styles/banner.css
@@ -43,7 +43,7 @@
 .right-container-line {
     border: 1px solid rgb(216, 152, 99);
     width: 220px;
-    margin: 0;
+    margin-bottom: 200px;
     padding: 0;
  }
 
